SERVER-2054 don't uassert due to unique index constraint violation in dropdups mode